// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@@# 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumSignificantDigits": 3,
          "minimumSignificantDigits": 2,
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "@@#",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`basic_argument_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 1,
      "value": "a",
    },
  ],
}
`;

exports[`basic_argument_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "a ",
    },
    Object {
      "type": 1,
      "value": "b",
    },
    Object {
      "type": 0,
      "value": " 
c",
    },
  ],
}
`;

exports[`compact-short currency/GBP 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "compactDisplay": "short",
          "currency": "GBP",
          "notation": "compact",
          "style": "currency",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "compact-short",
          },
          Object {
            "options": Array [
              "GBP",
            ],
            "stem": "currency",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`currency/CAD unit-width-narrow 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "currency": "CAD",
          "currencyDisplay": "narrowSymbol",
          "style": "currency",
          "unitDisplay": "narrow",
        },
        "tokens": Array [
          Object {
            "options": Array [
              "CAD",
            ],
            "stem": "currency",
          },
          Object {
            "options": Array [],
            "stem": "unit-width-narrow",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`currency/GBP .00##/@@@ unit-width-full-name 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "currency": "GBP",
          "currencyDisplay": "name",
          "maximumFractionDigits": 4,
          "maximumSignificantDigits": 3,
          "minimumFractionDigits": 2,
          "minimumSignificantDigits": 3,
          "style": "currency",
          "unitDisplay": "long",
        },
        "tokens": Array [
          Object {
            "options": Array [
              "GBP",
            ],
            "stem": "currency",
          },
          Object {
            "options": Array [
              "@@@",
            ],
            "stem": ".00##",
          },
          Object {
            "options": Array [],
            "stem": "unit-width-full-name",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`date_arg_skeleton_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {},
        "pattern": "yyyy.MM.dd G 'at' HH:mm:ss vvvv",
        "type": 1,
      },
      "type": 3,
      "value": "0",
    },
  ],
}
`;

exports[`date_arg_skeleton_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {},
        "pattern": "EEE, MMM d, ''yy",
        "type": 1,
      },
      "type": 3,
      "value": "0",
    },
  ],
}
`;

exports[`date_arg_skeleton_3 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {},
        "pattern": "h:mm a",
        "type": 1,
      },
      "type": 3,
      "value": "0",
    },
  ],
}
`;

exports[`double_apostrophes_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "a'b",
    },
  ],
}
`;

exports[`duplicate_plural_selectors 1`] = `
Object {
  "err": Object {
    "kind": 20,
    "location": Object {
      "end": Object {
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "start": Object {
        "column": 42,
        "line": 1,
        "offset": 41,
      },
    },
    "message": "You have {count, plural, one {# hot dog} one {# hamburger} one {# sandwich} other {# snacks}} in your lunch bag.",
  },
  "val": null,
}
`;

exports[`duplicate_select_selectors 1`] = `
Object {
  "err": Object {
    "kind": 21,
    "location": Object {
      "end": Object {
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "start": Object {
        "column": 42,
        "line": 1,
        "offset": 41,
      },
    },
    "message": "You have {count, select, one {# hot dog} one {# hamburger} one {# sandwich} other {# snacks}} in your lunch bag.",
  },
  "val": null,
}
`;

exports[`empty_argument_1 1`] = `
Object {
  "err": Object {
    "kind": 2,
    "location": Object {
      "end": Object {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "message": "My name is { }",
  },
  "val": null,
}
`;

exports[`empty_argument_2 1`] = `
Object {
  "err": Object {
    "kind": 2,
    "location": Object {
      "end": Object {
        "column": 2,
        "line": 2,
        "offset": 14,
      },
      "start": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "message": "My name is {
}",
  },
  "val": null,
}
`;

exports[`escaped_multiple_tags_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I <3 cats. <a>foo</a> <b>bar</b>",
    },
  ],
}
`;

exports[`escaped_pound_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "offset": 0,
      "options": Object {
        "=0": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "no photos",
            },
          ],
        },
        "=1": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "one photo",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "# photos",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "numPhotos",
    },
  ],
}
`;

exports[`expect_arg_format_1 1`] = `
Object {
  "err": Object {
    "kind": 4,
    "location": Object {
      "end": Object {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "start": Object {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    "message": "My name is {0, }",
  },
  "val": null,
}
`;

exports[`expect_number_arg_skeleton_token_1 1`] = `
Object {
  "err": Object {
    "kind": 7,
    "location": Object {
      "end": Object {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
    },
    "message": "{0, number, ::}",
  },
  "val": null,
}
`;

exports[`expect_number_arg_skeleton_token_option_1 1`] = `
Object {
  "err": Object {
    "kind": 7,
    "location": Object {
      "end": Object {
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
    },
    "message": "{0, number, ::currency/}",
  },
  "val": null,
}
`;

exports[`expect_number_arg_style_1 1`] = `
Object {
  "err": Object {
    "kind": 6,
    "location": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
    },
    "message": "{0, number, }",
  },
  "val": null,
}
`;

exports[`ignore_tag_number_arg_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I have <foo>",
    },
    Object {
      "style": null,
      "type": 2,
      "value": "numCats",
    },
    Object {
      "type": 0,
      "value": "</foo> cats.",
    },
  ],
}
`;

exports[`ignore_tags_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "<test-tag></test-tag>",
    },
  ],
}
`;

exports[`incomplete_nested_message_in_tag 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 23,
        "line": 1,
        "offset": 22,
      },
      "start": Object {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
    },
    "message": "<a>{a, plural, other {</a>}}",
  },
  "val": null,
}
`;

exports[`invalid_arg_format_1 1`] = `
Object {
  "err": Object {
    "kind": 5,
    "location": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": Object {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    "message": "My name is {0, foo}",
  },
  "val": null,
}
`;

exports[`invalid_close_tag_1 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "message": "<a></ b>",
  },
  "val": null,
}
`;

exports[`invalid_closing_tag_1 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "message": "<test>a</123>",
  },
  "val": null,
}
`;

exports[`invalid_closing_tag_2 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "message": "<test>a</",
  },
  "val": null,
}
`;

exports[`invalid_tag_1 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "<test! />",
  },
  "val": null,
}
`;

exports[`invalid_tag_2 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "<test / >",
  },
  "val": null,
}
`;

exports[`invalid_tag_3 1`] = `
Object {
  "err": Object {
    "kind": 23,
    "location": Object {
      "end": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "<test foo />",
  },
  "val": null,
}
`;

exports[`left_angle_bracket_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I <3 cats.",
    },
  ],
}
`;

exports[`less_than_sign_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "< ",
    },
    Object {
      "options": Object {
        "1": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "12",
            },
          ],
        },
        "2": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "6",
            },
          ],
        },
        "3": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "3",
            },
          ],
        },
        "4": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "2",
            },
          ],
        },
        "A": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "1",
            },
          ],
        },
      },
      "type": 5,
      "value": "level",
    },
    Object {
      "type": 0,
      "value": " hours",
    },
  ],
}
`;

exports[`malformed_argument_1 1`] = `
Object {
  "err": Object {
    "kind": 3,
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "message": "My name is {0!}",
  },
  "val": null,
}
`;

exports[`measure-unit/length-meter .00##/@@@ unit-width-full-name 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "currencyDisplay": "name",
          "maximumFractionDigits": 4,
          "maximumSignificantDigits": 3,
          "minimumFractionDigits": 2,
          "minimumSignificantDigits": 3,
          "style": "unit",
          "unit": "meter",
          "unitDisplay": "long",
        },
        "tokens": Array [
          Object {
            "options": Array [
              "length-meter",
            ],
            "stem": "measure-unit",
          },
          Object {
            "options": Array [
              "@@@",
            ],
            "stem": ".00##",
          },
          Object {
            "options": Array [],
            "stem": "unit-width-full-name",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`negative_offset_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "offset": -2,
      "options": Object {
        "=-1": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": " ",
            },
            Object {
              "type": 1,
              "value": "text",
            },
            Object {
              "type": 0,
              "value": " project",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": " ",
            },
            Object {
              "type": 1,
              "value": "text",
            },
            Object {
              "type": 0,
              "value": " projects",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "c",
    },
  ],
}
`;

exports[`nested_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    ",
    },
    Object {
      "options": Object {
        "female": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "offset": 1,
              "options": Object {
                "=0": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " does not give a party.",
                    },
                  ],
                },
                "=1": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " to her party.",
                    },
                  ],
                },
                "=2": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and one other person to her party.",
                    },
                  ],
                },
                "other": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and ",
                    },
                    Object {
                      "type": 7,
                    },
                    Object {
                      "type": 0,
                      "value": " other people to her party.",
                    },
                  ],
                },
              },
              "pluralType": "cardinal",
              "type": 6,
              "value": "num_guests",
            },
          ],
        },
        "male": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "offset": 1,
              "options": Object {
                "=0": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " does not give a party.",
                    },
                  ],
                },
                "=1": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " to his party.",
                    },
                  ],
                },
                "=2": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and one other person to his party.",
                    },
                  ],
                },
                "other": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and ",
                    },
                    Object {
                      "type": 7,
                    },
                    Object {
                      "type": 0,
                      "value": " other people to his party.",
                    },
                  ],
                },
              },
              "pluralType": "cardinal",
              "type": 6,
              "value": "num_guests",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "offset": 1,
              "options": Object {
                "=0": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " does not give a party.",
                    },
                  ],
                },
                "=1": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " to their party.",
                    },
                  ],
                },
                "=2": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and one other person to their party.",
                    },
                  ],
                },
                "other": Object {
                  "value": Array [
                    Object {
                      "type": 1,
                      "value": "host",
                    },
                    Object {
                      "type": 0,
                      "value": " invites ",
                    },
                    Object {
                      "type": 1,
                      "value": "guest",
                    },
                    Object {
                      "type": 0,
                      "value": " and ",
                    },
                    Object {
                      "type": 7,
                    },
                    Object {
                      "type": 0,
                      "value": " other people to their party.",
                    },
                  ],
                },
              },
              "pluralType": "cardinal",
              "type": 6,
              "value": "num_guests",
            },
          ],
        },
      },
      "type": 5,
      "value": "gender_of_host",
    },
    Object {
      "type": 0,
      "value": "
    ",
    },
  ],
}
`;

exports[`nested_tags_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "this is ",
    },
    Object {
      "children": Array [
        Object {
          "type": 0,
          "value": "nested ",
        },
        Object {
          "children": Array [
            Object {
              "type": 1,
              "value": "placeholder",
            },
          ],
          "type": 8,
          "value": "b",
        },
      ],
      "type": 8,
      "value": "a",
    },
  ],
}
`;

exports[`not_escaped_pound_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "'#'",
    },
  ],
}
`;

exports[`not_quoted_string_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "'aa'b'",
    },
  ],
}
`;

exports[`not_quoted_string_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I don't know",
    },
  ],
}
`;

exports[`not_self_closing_tag_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "< test-tag />",
    },
  ],
}
`;

exports[`number_arg_skeleton_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {},
        "tokens": Array [
          Object {
            "options": Array [
              "GBP",
            ],
            "stem": "currency",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`number_arg_skeleton_3 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {},
        "tokens": Array [
          Object {
            "options": Array [
              "GBP",
            ],
            "stem": "currency",
          },
          Object {
            "options": Array [],
            "stem": "compact-short",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`number_arg_style_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": "percent",
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`open_close_tag_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [],
      "type": 8,
      "value": "test-tag",
    },
  ],
}
`;

exports[`open_close_tag_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [
        Object {
          "type": 0,
          "value": "foo",
        },
      ],
      "type": 8,
      "value": "test-tag",
    },
  ],
}
`;

exports[`open_close_tag_3 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [
        Object {
          "type": 0,
          "value": "foo ",
        },
        Object {
          "type": 1,
          "value": "0",
        },
        Object {
          "type": 0,
          "value": " bar",
        },
      ],
      "type": 8,
      "value": "test-tag",
    },
  ],
}
`;

exports[`open_close_tag_with_args 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I ",
    },
    Object {
      "children": Array [
        Object {
          "type": 0,
          "value": "have",
        },
      ],
      "type": 8,
      "value": "b",
    },
    Object {
      "type": 0,
      "value": " ",
    },
    Object {
      "children": Array [
        Object {
          "style": null,
          "type": 2,
          "value": "numCats",
        },
        Object {
          "type": 0,
          "value": " some string ",
        },
        Object {
          "type": 1,
          "value": "placeholder",
        },
      ],
      "type": 8,
      "value": "foo",
    },
    Object {
      "type": 0,
      "value": " cats.",
    },
  ],
}
`;

exports[`open_close_tag_with_nested_arg 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [
        Object {
          "type": 0,
          "value": "You have ",
        },
        Object {
          "offset": 0,
          "options": Object {
            "one": Object {
              "value": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": 7,
                    },
                  ],
                  "type": 8,
                  "value": "italic",
                },
                Object {
                  "type": 0,
                  "value": " apple",
                },
              ],
            },
            "other": Object {
              "value": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": 7,
                    },
                  ],
                  "type": 8,
                  "value": "italic",
                },
                Object {
                  "type": 0,
                  "value": " apples",
                },
              ],
            },
          },
          "pluralType": "cardinal",
          "type": 6,
          "value": "count",
        },
        Object {
          "type": 0,
          "value": ".",
        },
      ],
      "type": 8,
      "value": "bold",
    },
  ],
}
`;

exports[`percent .## 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumFractionDigits": 2,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [],
            "stem": ".##",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`percent .0### 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumFractionDigits": 4,
          "minimumFractionDigits": 1,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [],
            "stem": ".0###",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`percent .00/@## 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumFractionDigits": 2,
          "maximumSignificantDigits": 3,
          "minimumFractionDigits": 2,
          "minimumSignificantDigits": 1,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [
              "@##",
            ],
            "stem": ".00",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`percent .00/@@@ 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumFractionDigits": 2,
          "maximumSignificantDigits": 3,
          "minimumFractionDigits": 2,
          "minimumSignificantDigits": 3,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [
              "@@@",
            ],
            "stem": ".00",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`percent .00/@@@@* 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "maximumFractionDigits": 2,
          "minimumFractionDigits": 2,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [
              "@@@@*",
            ],
            "stem": ".00",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`percent .000* 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "minimumFractionDigits": 3,
          "style": "percent",
        },
        "tokens": Array [
          Object {
            "options": Array [],
            "stem": "percent",
          },
          Object {
            "options": Array [],
            "stem": ".000*",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`plural_arg_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    Cart: ",
    },
    Object {
      "type": 1,
      "value": "itemCount",
    },
    Object {
      "type": 0,
      "value": " ",
    },
    Object {
      "offset": 0,
      "options": Object {
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "item",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "items",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "itemCount",
    },
  ],
}
`;

exports[`plural_arg_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    You have ",
    },
    Object {
      "offset": 0,
      "options": Object {
        "=0": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "no items",
            },
          ],
        },
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "1 item",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 1,
              "value": "itemCount",
            },
            Object {
              "type": 0,
              "value": " items",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "itemCount",
    },
    Object {
      "type": 0,
      "value": ".",
    },
  ],
}
`;

exports[`plural_arg_with_escaped_nested_message 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    ",
    },
    Object {
      "offset": 0,
      "options": Object {
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "item}",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "items}",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "itemCount",
    },
  ],
}
`;

exports[`plural_arg_with_offset_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You have ",
    },
    Object {
      "offset": 2,
      "options": Object {
        "=0": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "no items",
            },
          ],
        },
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "1 item",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 1,
              "value": "itemCount",
            },
            Object {
              "type": 0,
              "value": " items",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "itemCount",
    },
    Object {
      "type": 0,
      "value": ".",
    },
  ],
}
`;

exports[`quoted_pound_sign_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You ",
    },
    Object {
      "offset": 0,
      "options": Object {
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "worked for # hour",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "worked for # hours",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "count",
    },
    Object {
      "type": 0,
      "value": " today.",
    },
  ],
}
`;

exports[`quoted_pound_sign_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You ",
    },
    Object {
      "offset": 0,
      "options": Object {
        "one": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "worked for # hour} other {worked for ",
            },
            Object {
              "type": 7,
            },
            Object {
              "type": 0,
              "value": " hours",
            },
          ],
        },
      },
      "pluralType": "cardinal",
      "type": 6,
      "value": "count",
    },
    Object {
      "type": 0,
      "value": " today.",
    },
  ],
}
`;

exports[`quoted_string_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "{a'b}",
    },
  ],
}
`;

exports[`quoted_string_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "}a'b{",
    },
  ],
}
`;

exports[`quoted_string_3 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "aaa{",
    },
  ],
}
`;

exports[`quoted_string_4 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "aaa}",
    },
  ],
}
`;

exports[`quoted_string_5 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "This {isn't} obvious",
    },
  ],
}
`;

exports[`quoted_tag_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "<a>",
    },
  ],
}
`;

exports[`scientific/+ee/sign-always 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "style": Object {
        "parsedOptions": Object {
          "notation": "scientific",
          "signDisplay": "always",
        },
        "tokens": Array [
          Object {
            "options": Array [
              "+ee",
              "sign-always",
            ],
            "stem": "scientific",
          },
        ],
        "type": 0,
      },
      "type": 2,
      "value": "0",
    },
  ],
}
`;

exports[`select_arg_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    ",
    },
    Object {
      "options": Object {
        "female": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "She",
            },
          ],
        },
        "male": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "He",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "They",
            },
          ],
        },
      },
      "type": 5,
      "value": "gender",
    },
    Object {
      "type": 0,
      "value": " will respond shortly.",
    },
  ],
}
`;

exports[`select_arg_with_nested_arguments 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    ",
    },
    Object {
      "options": Object {
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "No taxes apply.",
            },
          ],
        },
        "yes": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "An additional ",
            },
            Object {
              "style": "percent",
              "type": 2,
              "value": "taxRate",
            },
            Object {
              "type": 0,
              "value": " tax will be collected.",
            },
          ],
        },
      },
      "type": 5,
      "value": "taxableArea",
    },
    Object {
      "type": 0,
      "value": "
    ",
    },
  ],
}
`;

exports[`selectordinal_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "offset": 0,
      "options": Object {
        "=0": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "ground",
            },
          ],
        },
        "few": Object {
          "value": Array [
            Object {
              "type": 7,
            },
            Object {
              "type": 0,
              "value": "rd",
            },
          ],
        },
        "one": Object {
          "value": Array [
            Object {
              "type": 7,
            },
            Object {
              "type": 0,
              "value": "st",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 7,
            },
            Object {
              "type": 0,
              "value": "th",
            },
          ],
        },
        "two": Object {
          "value": Array [
            Object {
              "type": 7,
            },
            Object {
              "type": 0,
              "value": "nd",
            },
          ],
        },
      },
      "pluralType": "ordinal",
      "type": 6,
      "value": "floor",
    },
    Object {
      "type": 0,
      "value": " floor",
    },
  ],
}
`;

exports[`self_closing_tag_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [],
      "type": 8,
      "value": "test-tag",
    },
  ],
}
`;

exports[`self_closing_tag_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "children": Array [],
      "type": 8,
      "value": "test-tag",
    },
  ],
}
`;

exports[`simple_argument_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "My name is ",
    },
    Object {
      "type": 1,
      "value": "0",
    },
  ],
}
`;

exports[`simple_argument_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "My name is ",
    },
    Object {
      "type": 1,
      "value": "name",
    },
  ],
}
`;

exports[`simple_date_and_time_arg_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "Your meeting is scheduled for the ",
    },
    Object {
      "style": null,
      "type": 3,
      "value": "dateVal",
    },
    Object {
      "type": 0,
      "value": " at ",
    },
    Object {
      "style": null,
      "type": 4,
      "value": "timeVal",
    },
  ],
}
`;

exports[`simple_number_arg_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "I have ",
    },
    Object {
      "style": null,
      "type": 2,
      "value": "numCats",
    },
    Object {
      "type": 0,
      "value": " cats.",
    },
  ],
}
`;

exports[`treat_unicode_nbsp_as_whitespace 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "
    ",
    },
    Object {
      "options": Object {
        "female": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "type": 1,
              "value": "She",
            },
          ],
        },
        "male": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "type": 1,
              "value": "He",
            },
          ],
        },
        "other": Object {
          "value": Array [
            Object {
              "type": 0,
              "value": "
        ",
            },
            Object {
              "type": 1,
              "value": "They",
            },
          ],
        },
      },
      "type": 5,
      "value": "gender",
    },
    Object {
      "type": 0,
      "value": "
    ",
    },
  ],
}
`;

exports[`trivial_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "a",
    },
  ],
}
`;

exports[`trivial_2 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "中文",
    },
  ],
}
`;

exports[`unclosed_argument_1 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "message": "My name is { 0",
  },
  "val": null,
}
`;

exports[`unclosed_argument_2 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "message": "My name is { ",
  },
  "val": null,
}
`;

exports[`unclosed_number_arg_1 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "{0, number",
  },
  "val": null,
}
`;

exports[`unclosed_number_arg_2 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "{0, number, percent",
  },
  "val": null,
}
`;

exports[`unclosed_number_arg_3 1`] = `
Object {
  "err": Object {
    "kind": 1,
    "location": Object {
      "end": Object {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "{0, number, ::percent",
  },
  "val": null,
}
`;

exports[`unclosed_quoted_string_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "a {a{ {}{}{} 'bb",
    },
  ],
}
`;

exports[`unclosed_quoted_string_2 1`] = `
Object {
  "err": Object {
    "kind": 2,
    "location": Object {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "message": "a 'a {}{}",
  },
  "val": null,
}
`;

exports[`unclosed_quoted_string_3 1`] = `
Object {
  "err": Object {
    "kind": 2,
    "location": Object {
      "end": Object {
        "column": 4,
        "line": 2,
        "offset": 23,
      },
      "start": Object {
        "column": 2,
        "line": 2,
        "offset": 21,
      },
    },
    "message": "a '{a{ {}{}{}}}''' 
 {}",
  },
  "val": null,
}
`;

exports[`unclosed_quoted_string_4 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You have {count",
    },
  ],
}
`;

exports[`unclosed_quoted_string_5 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You have {count",
    },
  ],
}
`;

exports[`unclosed_quoted_string_6 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "You have {count}",
    },
  ],
}
`;

exports[`unescaped_string_literal_1 1`] = `
Object {
  "err": null,
  "val": Array [
    Object {
      "type": 0,
      "value": "}",
    },
  ],
}
`;

exports[`unmatched_open_close_tag_1 1`] = `
Object {
  "err": Object {
    "kind": 26,
    "location": Object {
      "end": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "message": "<a></b>",
  },
  "val": null,
}
`;

exports[`unmatched_open_close_tag_2 1`] = `
Object {
  "err": Object {
    "kind": 26,
    "location": Object {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "message": "<a></ab>",
  },
  "val": null,
}
`;
